--- a/main.html
+++ b/main.html
@@ -1,121 +1,100 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intern Application Form</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .invalid-feedback {
-            display: none;
-        }
-
-        .is-invalid+.invalid-feedback {
-            display: block;
-        }
-    </style>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="styles.css">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
+		
+	</script>
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h2>Intern Application Form</h2>
-        <form id="intern-form" novalidate>
-            <!-- First Name -->
-            <div class="mb-3">
-                <label for="first-name-input" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="first-name-input" required>
-                <div class="invalid-feedback">
-                    Please provide your first name.
-                </div>
-            </div>
-
-            <!-- Last Name -->
-            <div class="mb-3">
-                <label for="last-name-input" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="last-name-input" required>
-                <div class="invalid-feedback">
-                    Please provide your last name.
-                </div>
-            </div>
-
-            <!-- Email -->
-            <div class="mb-3">
-                <label for="email-input" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email-input" required>
-                <div class="invalid-feedback">
-                    Please provide a valid email address.
-                </div>
-            </div>
-
-            <!-- College Name -->
-            <div class="mb-3">
-                <label for="college-input" class="form-label">College Name</label>
-                <input type="text" class="form-control" id="college-input" required>
-                <div class="invalid-feedback">
-                    Please provide your college name.
-                </div>
-            </div>
-
-            <!-- Roll Number -->
-            <div class="mb-3">
-                <label for="roll-no-input" class="form-label">Roll Number</label>
-                <input type="number" class="form-control" id="roll-no-input" required>
-                <div class="invalid-feedback">
-                    Please provide your roll number.
-                </div>
-            </div>
-
-            <!-- Graduation Year -->
-            <div class="mb-3">
-                <label for="graduation-year" class="form-label">Graduation Year</label>
-                <select class="form-select" id="graduation-year" required>
-                    <option value="" selected disabled>Select your graduation year</option>
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                    <option value="2022">2022</option>
-                    <option value="2023">2023</option>
-                </select>
-                <div class="invalid-feedback">
-                    Please select your graduation year.
-                </div>
-            </div>
-
-            <!-- Conditions Checkbox -->
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="conditions-checkbox" required>
-                <label class="form-check-label" for="conditions-checkbox">I agree to the terms and conditions</label>
-                <div class="invalid-feedback">
-                    You must agree to the terms and conditions.
-                </div>
-            </div>
-
-            <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+	<div>
+		<form class="row g-3 needs-validation" novalidate>
+  <div class="col-md-4">
+    <label for="first-name-input" class="form-label">First Name</label>
+    <input type="text" class="form-control" id="first-name-input" value="" required>
+    <div class="valid-feedback">
+      Looks good!
     </div>
+  </div>
+  <div class="col-md-4">
+    <label for="last-name-input" class="form-label">Last Name</label>
+    <input type="text" class="form-control" id="last-name-input" value="" required>
+    <div class="valid-feedback">
+      Looks good!
+    </div>
+  </div>
+	<div class="mb-3">
+  <label for="email-input" class="form-label">Email Address</label>
+  <input type="email" class="form-control" id="email-input" placeholder="name@example.com" required>
+</div>
+<!--   <div class="col-md-4">
+    <label for="validationCustomUsername" class="form-label">Username</label>
+    <div class="input-group has-validation">
+      <span class="input-group-text" id="inputGroupPrepend">@</span>
+      <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+      <div class="invalid-feedback">
+        Please choose a username.
+      </div>
+    </div>
+  </div> -->
+			 <div class="col-md-4">
+    <label for="college-input" class="form-label">College</label>
+    <input type="text" class="form-control" id="college-input" value="" required>
+    <div class="valid-feedback">
+      Looks good!
+    </div>
+				 <label for="grad-year-select" class="form-label">Graduation Year</label>
+		<select class="form-select" id="grad-year-select" aria-label="Default select example" required>
+	  <option selected>Choose</option>
+	  <option value="1">2020</option>
+	  <option value="2">2021</option>
+	  <option value="3">2022</option>
+	  <option value="3">2023</option>
+	</select>
+				  <div class="col-md-4">
+    <label for="roll-no-input" class="form-label">Roll No.</label>
+    <input type="text" class="form-control" id="roll-no-input"  value="Otto" required>
+    <div class="valid-feedback">
+      Looks good!
+    </div>
+  </div>
+  </div>
+  <div class="col-md-6">
+    <label for="validationCustom03" class="form-label">City</label>
+    <input type="text" class="form-control" id="validationCustom03" required>
+    <div class="invalid-feedback">
+      Please provide a valid city.
+    </div>
+  </div>
+  <div class="col-md-3">
+    <label for="validationCustom04" class="form-label">State</label>
+    <select class="form-select" id="validationCustom04" required>
+      <option selected disabled value="">Choose...</option>
+      <option>...</option>
+    </select>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" required>
+      <label class="form-check-label" for="conditions-checkbox">
+        Agree to terms and conditions
+      </label>
+     
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Submit form</button>
+  </div>
+</form>
+	</div>
+	
+    <script type="text/javascript" src="./script.js">
+		
+</script>
 
-    <!-- Bootstrap JS and Form Validation -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Form validation
-        (function () {
-            'use strict'
-
-            const form = document.getElementById('intern-form');
-
-            form.addEventListener('submit', function (event) {
-                if (!form.checkValidity()) {
-                    event.preventDefault()
-                    event.stopPropagation()
-                }
-
-                form.classList.add('was-validated');
-            }, false)
-        })();
-    </script>
 </body>
 
 </html>
