--- a/main.html
+++ b/main.html
@@ -1,100 +1,79 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles.css">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
-		
-	</script>
-</head>
-
-<body>
-	<div>
-		<form class="row g-3 needs-validation" novalidate>
-  <div class="col-md-4">
-    <label for="first-name-input" class="form-label">First Name</label>
-    <input type="text" class="form-control" id="first-name-input" value="" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-  </div>
-  <div class="col-md-4">
-    <label for="last-name-input" class="form-label">Last Name</label>
-    <input type="text" class="form-control" id="last-name-input" value="" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-  </div>
-	<div class="mb-3">
-  <label for="email-input" class="form-label">Email Address</label>
-  <input type="email" class="form-control" id="email-input" placeholder="name@example.com" required>
-</div>
-<!--   <div class="col-md-4">
-    <label for="validationCustomUsername" class="form-label">Username</label>
-    <div class="input-group has-validation">
-      <span class="input-group-text" id="inputGroupPrepend">@</span>
-      <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-      <div class="invalid-feedback">
-        Please choose a username.
-      </div>
-    </div>
-  </div> -->
-			 <div class="col-md-4">
-    <label for="college-input" class="form-label">College</label>
-    <input type="text" class="form-control" id="college-input" value="" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-				 <label for="grad-year-select" class="form-label">Graduation Year</label>
-		<select class="form-select" id="grad-year-select" aria-label="Default select example" required>
-	  <option selected>Choose</option>
-	  <option value="1">2020</option>
-	  <option value="2">2021</option>
-	  <option value="3">2022</option>
-	  <option value="3">2023</option>
-	</select>
-				  <div class="col-md-4">
-    <label for="roll-no-input" class="form-label">Roll No.</label>
-    <input type="text" class="form-control" id="roll-no-input"  value="Otto" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-  </div>
-  </div>
-  <div class="col-md-6">
-    <label for="validationCustom03" class="form-label">City</label>
-    <input type="text" class="form-control" id="validationCustom03" required>
+    <head>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <title>internship form</title>
+    </head>
+    <body>
+		<form>
+        <h1 style="text-align: center;">Internship Form</h1>
+        <div class="form-group row">
+  <label for="first-name-input" class="col-sm-2 form-label">First Name</label>
+  <div class="col-sm-10">
+    <input type="text" class="form-control is-invalid" id="first-name-input" required>
     <div class="invalid-feedback">
-      Please provide a valid city.
+      First name required
     </div>
   </div>
-  <div class="col-md-3">
-    <label for="validationCustom04" class="form-label">State</label>
-    <select class="form-select" id="validationCustom04" required>
-      <option selected disabled value="">Choose...</option>
-      <option>...</option>
+</div>
+        <div class="form-group row">
+  <label for="last-name-input" class="col-sm-2 form-label">Last Name</label>
+  <div class="col-sm-10">
+    <input type="text" class="form-control is-invalid" id="last-name-input" required>
+    <div class="invalid-feedback">
+      Last name required
+    </div>
+  </div>
+</div>
+        <div class="form-group row">
+  <label for="email-input" class="col-sm-2 form-label">Email Address</label>
+  <div class="col-sm-10">
+    <input type="email" class="form-control is-invalid" id="email-input"required placeholder="xyz@abc.com">
+    <div class="invalid-feedback">
+      Email required
+    </div>
+  </div>
+</div>
+        <div class="form-group row">
+  <label for="college-input" class="col-sm-2 form-label">College</label>
+  <div class="col-sm-10">
+    <input type="text" class="form-control is-invalid" id="college-input" required>
+    <div class="invalid-feedback">
+      College name required
+    </div>
+  </div>
+</div>
+        <div class="form-group row">
+  <label for="grad-year-select" class="col-sm-2 form-label">Graduation Year</label>
+  <div class="col-sm-10">
+    <select class="form-control is-invalid form-select" required id="grad-year-select">
+        <option>2020</option>
+        <option>2021</option>
+        <option>2022</option>
+        <option>2023</option>
     </select>
-  <div class="col-12">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" required>
-      <label class="form-check-label" for="conditions-checkbox">
-        Agree to terms and conditions
-      </label>
-     
+    <div class="invalid-feedback">
+      Please select a valid graduation year
     </div>
   </div>
-  <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit form</button>
+</div>
+        <div class="form-group row">
+  <label for="roll-no-input" class="col-sm-2 form-label form-control">Roll No.</label>
+  <div class="col-sm-10">
+    <input type="text" class="form-control is-invalid" id="roll-no-input" required>
+    <div class="invalid-feedback">
+      Roll no required
+    </div>
   </div>
-</form>
-	</div>
-	
-    <script type="text/javascript" src="./script.js">
-		
-</script>
-
-</body>
-
+</div>
+        <div class="form-group form-check">
+  <input type="checkbox" class="form-check-input" id="conditions-checkbox" required>
+  <label class="form-check-label" for="conditions-checkbox">Agree to terms and conditions</label>
+	<div class="invalid-feedback">
+      You must agree before submitting
+    </div>
+		</div>	
+        <input type="submit" value="Submit Form">
+		</form>
+    </body>
 </html>
